# lumactl

./: Cargo.toml  README.md  install.yml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: ipc_server.rs  main.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
src/: backlight.rs  brightness_control.rs  ddc.rs  display_info.rs  main.rs
