[package]
name = "lumactl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
ddc-hi = { version = "0.4.1" }
eyre = "0.6.12"
log = "0.4.22"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.7"
xdg = "2.5.2"
serde_json = "1.0.133"
ctrlc = "3.4.5"
flexi_logger = "0.29.6"
nix = "0.29.0"
i2c-linux = { version = "0.1.2", features = ["i2c"] }
ddc-i2c = { version = "0.2.2", features = ["with-linux"] }
ddc = "0.2.2"
serde = { version = "1.0.215", features = ["derive"] }
